buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        mavenCentral()
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url='https://repo.spongepowered.org/repository/maven-public' }
    }
    dependencies {
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT', changing: true
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

group = 'net.momostudios'
version = '2.1.9-b04'

java {
    archivesBaseName = 'ColdSweat'
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}
compileJava {
    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
}

minecraft {
    mappings channel: 'official', version: '1.18.1'
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
            arg "-mixin.config=cold_sweat.mixin.json"
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'coldsweat', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                coldsweat {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url 'https://www.cursemaven.com'
         content {
             includeGroup "curse.maven"
         }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.18.1-39.0.88'
    annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
    compileOnly fg.deobf("curse.maven:sereneapi-291874:3599022")
    runtimeOnly fg.deobf("curse.maven:spark-361579:3644347")
}

mixin {
    add sourceSets.main, "cold_sweat.mixin-refmap.json"
    config 'cold_sweat.mixin.json'
}

// Example for how to get properties into the manifest for reading at runtime.
jar {
    manifest {
        attributes([
                "Specification-Title"     : "coldsweat",
                "Specification-Vendor"    : "chubbymomo, iMikul, skinnymomo",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "chubbymomo, iMikul, skinnymomo",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "TweakerClass"            : "org.spongepowered.asm.launch.MixinTweaker",
                "TweakOrder"              : 0,
                "MixinConfigs"            : "cold_sweat.mixin.json"
        ])
    }
}

jar.finalizedBy('reobfJar')
